--- a/main.css
+++ b/main.css
@@ -32,7 +32,7 @@ body {
     background-color: #121212;
 }
 
-#pakalpojumi, #partneri, #par-mums,#form{
+#pakalpojumi, #partneri, #par-mums,#contact-us{
     scroll-margin-top: 80px;
 }
 
@@ -44,14 +44,14 @@ h1, h2, h4{
     opacity: 0;
     filter: blur(5px);
     transform: translateX(-100%);
-    transition: all 2s;
+    transition: all 1s;
 }
 
 .hidden-right{
     opacity: 0;
     filter: blur(5px);
     transform: translateX(+100%);
-    transition: all 2s;
+    transition: all 1s;
 }
 
 .show{
@@ -59,41 +59,6 @@ h1, h2, h4{
     filter: blur(0);
     transform: translateX(0);
 }
-
-/* video */
-
-/* #portfolio-video{
-    display: none;
-    width: 100vw;
-    transition-property: bottom right;
-    transition: 0.5s;
-}
-
-#corner-video{
-    position: fixed;
-    bottom: 0;
-    margin: 0;
-    padding: 0;
-    right: 0;
-    width: 300px;
-    z-index: 999;
-    transition-property: bottom right;
-    transition: 0.5s;
-}
-
-#minimize img{
-    height: 64px;
-    cursor: pointer;
-}
-
-#minimize{
-    display: none;
-    position: fixed;
-    right: 20px;
-    bottom: 20px;
-    z-index: 999;
-} */
-
 
 /* nav */
 
@@ -218,41 +183,6 @@ nav {
     text-transform: uppercase;
 }
 
-/* 
-.play-btn{
-    position: absolute;
-    top: 64%;
-    left: 24%;
-    text-align: center;
-    color: #f4f4f4;
-    display: flex;
-    align-items: center;
-    font-size: 15px;
-    font-family: 'Hanken Grotesk', sans-serif;
-    cursor: pointer;
-    border-radius: 50px;
-    border: 1px solid #cc2c47;
-    padding: 10px 15px;
-    padding-right: 20px;
-    transition: all 500ms;
-    font-weight: bold;
-}
-
-.play-btn img{
-    height: 30px;
-    margin: 5px;
-    filter: invert(42%) sepia(84%) saturate(6930%) hue-rotate(337deg) brightness(85%) contrast(86%);
-}
-
-.play-btn:hover {
-    transition: all 500ms;
-    border: 1px solid #f4f4f4;
-    color: #cc2c47;
-    font-weight: bold;
-    background-color: #f4f4f4;
-    transform: scale(0.95);
-} */
-
 /* Pakalpojumi */
 
 .pakalpojumi{
@@ -286,7 +216,6 @@ nav {
     padding: 30px;
     margin: 100px 5rem;
     /* background-color: #212224; */
-    transition: all 500ms;
     font-family: 'Hanken Grotesk', sans-serif;
     color: #121212;
 }
@@ -327,83 +256,9 @@ nav {
     font-size: 50px;
 }
 
-/* .wrapper{
-    position: relative;
-    max-width: 1000px;
-    margin: 100px auto;
-}
-
-.wrapper i {
-    position: absolute;
-    cursor: pointer;
-    top: 50%;
-    background: #fff;
-    height: 45px;
-    width: 45px;
-    text-align: center;
-    line-height: 46px;
-    border-radius: 50%;
-    font-size: 1.2rem;
-    transform: translateY(-50%);
-}
-
-.wrapper i:first-child{
-    left: -50px;
-    display: block;
-}
-
-.wrapper i:last-child{
-    right: -50px;
-} 
-
-.carousel {
-    display: flex;
-    overflow: hidden;
-  }
-  
-  .carousel-item {
-    flex: 0 0 calc(100% / 3);
-    max-width: calc(100% / 3);
-  }
-  
-  .carousel-item.active {
-    display: block;
-  }
-
-.wrapper .carousel {
-    font-size: 0px;
-    cursor: pointer;
-    overflow: hidden;
-    white-space: nowrap;
-    scroll-behavior: smooth;
-}
-
-.carousel.dragging{
-    cursor: grab;
-    scroll-behavior: auto;
-}
-
-.carousel.dragging img {
-    pointer-events: none;
-}
-
-
-.carousel img {
-    height: 400px;
-    object-fit: cover;
-    padding: 10px;
-    width: calc(100% / 3) ;
-}
-
-.carousel img:first-child{
-    margin-left: 0px;
-    padding: 0;
-} */
-
-
 .partneri-logo{
     display: grid;
-    grid-template-columns: repeat(5, 10%);
+    grid-template-columns: 10%, 15%, 10%, 15%,10%;
     grid-template-rows: 1fr 1fr;
     align-items: center;
     justify-content: space-evenly;
@@ -416,27 +271,46 @@ nav {
     width: 100px;
 }
 .partneri-logo-1{
-    background-image: url(Klienti/JDFS.png);
+    background-image: url(Klienti/Synotip.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
     grid-column: 2;
     grid-row: 1;
+    height: 150px;
+    width: 200px;
 }
 .partneri-logo-2{
-    background-image: url(Klienti/MG.png);
+    background-image: url(Klienti/MG_white.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
     grid-column: 4;
     grid-row: 1;
+    height: 150px;
+    width: 200px;
 }
 .partneri-logo-3{
-    background-image: url(Klienti/Synotip.png);
+    background-image: url(Klienti/JDFS.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
     grid-column: 1;
     grid-row: 2;
 }
 .partneri-logo-4{
-    background-image: url(Klienti/Joker.png);
+    background-image: url(Klienti/Joker_white.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
     grid-column: 3;
     grid-row: 2;
 }
 .partneri-logo-5{
-    background-image: url(Klienti/SKY.png);
+    background-image: url(Klienti/Sky_white.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
     grid-column: 5;
     grid-row: 2;
 }
@@ -474,7 +348,7 @@ nav {
 
 .komanda div{
     margin: 100px auto;
-    width: 400px;
+    width: 450px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -495,7 +369,6 @@ nav {
     border-radius: 100%;
     height: 220px;
     margin: 0 60px;
-    transition: all 500ms;
     box-shadow: 0.5px 0.5px 5px #121212;
 }
 
@@ -674,7 +547,7 @@ form {
 
 /* On phone */
 
-@media screen and (max-width: 1300px) {
+@media screen and (max-width: 1400px) {
 
         .portfolio-text {
             display: flex;
@@ -686,11 +559,6 @@ form {
             top: 45%;
             left: 50%;
             transform: translate(-50%,-50%);
-        }
-
-        .play-btn{
-            top: 60%;
-            left: 43%;
         }
 
         .soc-tikli-div, .satura-veidosana-div{
@@ -825,9 +693,9 @@ form {
         background-image: url(Backgrounds/harry-cunningham-7L2h4zTYiNI-unsplash.jpg);
         background-attachment: fixed;
         background-repeat: no-repeat;
-        background-position-y: top;
+        background-position-y: center;
         background-position-x: 30%;
-        background-size: 1100px;
+        background-size: 1500px;
         opacity: 0.5;
     }
 
