--- a/main.css
+++ b/main.css
@@ -690,9 +690,12 @@ form {
 @media(max-width: 450px) {
 
     .image-container{
+        background-image: url(Backgrounds/harry-cunningham-7L2h4zTYiNI-unsplash.jpg);
         background-attachment: fixed;
         background-repeat: no-repeat;
-        background-size: contain;
+        background-position-y: center;
+        background-position-x: 20%;
+        background-size: 400vw;
         opacity: 0.5;
     }
 
