--- a/main.css
+++ b/main.css
@@ -690,7 +690,7 @@ form {
 @media(max-width: 450px) {
 
     .image-container{
-        background-image: url(Backgrounds/hill_media_background.jpg);
+        background-image: url(Backgrounds/hill media background.png);
         background-attachment: fixed;
         background-repeat: no-repeat;
         background-position-y: center;
