--- a/main.css
+++ b/main.css
@@ -719,7 +719,7 @@ form {
 @media(max-width: 450px) and (orientation: portrait) {
     .image-container {
         background-position-x: 20%;
-        scale: 1.5;
+        background-size: cover;
     }
     .portfolio-text h2 {
         /* font-size: 50px; */
