--- a/main.css
+++ b/main.css
@@ -801,6 +801,7 @@ form {
 @media(max-width: 800px) and (orientation: landscape) {
     .image-container{
         background-attachment: scroll;
+        background-size: cover;
     }
     .portfolio-text h2 {
         font-size: 3em;
